src/route/PasswordChangePage/PasswordChange.style.scss
.PasswordChangePageV1 {
  @include mobile {
    display: flex;
    margin: auto;
  }

  &-Wrapper {
    padding: 2rem 0;
    max-width: 335px;
    margin-left: 200px;
    &_isArabicStyle {
      margin-right: 200px;
      margin-left: auto;
    }

    @include before-desktop {
      padding: 2rem;

      h1 {
        font-size: 1.5rem;
      }
    }

    h1 {
      font-family: "Avenir Next Demi Bold";
      font-size: 40px;
      margin-top: 32px;
    }

    p {
      width: 540px;
      font-size: 16px;
      margin: 28px 0 26px;

      @include mobile {
        max-width: 300px;
      }
    }

    .Field {
      span {
        top: 4.5px;
      }
      &::placeholder {
        text-transform: uppercase;
      }
    }

    .error-msgs {
      display: flex;
      flex-direction: column;
      margin: 13px 0 91px;

      .msg {
        display: flex;

        .msgs-icon {
          display: block;
          width: 12px;
          height: 12px;
          margin: 1px 4px;
        }

        .succuss {
          color: #28d9aa;
        }

        .error {
          color: #f01136;
        }
      }
    }

    .terms-conditions {
      font-family: "Avenir Next Medium";
      font-size: 12px;
      width: 335px;
      margin-bottom: 10px;

      .underlined {
        text-decoration: underline;
        padding-left: 3px;
        padding-right: 3px;
      }
      a {
        margin-left: 0px;
      }
    }

    input {
      width: 335px;
      height: 50px;
      border-radius: 4px;
    }

    .Field {
      input:focus {
        border: 1px solid black;
      }
    }

    .save-btn {
      button {
        margin-top: 1rem;
        background-color: black;
        border: 1px solid black;
        border-radius: 4px;
        color: white;
        width: 335px;
        height: 50px;
        margin-bottom: 50px;

        &:hover {
          text-decoration: none;
        }
      }

      .disabled-btn {
        background-color: gray;
        border: 1px solid gray;
      }
    }
  }
}

